# Swerdlow

./: .gitignore  README.md  pyproject.toml
docs/: kickoff.md
docs/pilots/: 2026-05-14-contextdrift-phase-a.md  2026-05-14-contextdrift-phase-b.md
docs/research/: 2026-05-14-context-loading-landscape.md  2026-05-14-doc-organization-patterns.md
docs/superpowers/plans/: 2026-05-14-swerdlow-v0.1.md  2026-05-14-swerdlow-v0.2.md
docs/superpowers/specs/: 2026-05-14-swerdlow-v0.1-design.md  2026-05-14-swerdlow-v0.2-design.md
process/: v0.1-scoping.md
swerdlow/: __main__.py  cli.py  config.py  context.py  loader.py  types.py
swerdlow/bootstrap/: apply.py  plan.py  scan.py
tests/: conftest.py  test_bootstrap_apply.py  test_bootstrap_plan.py  test_bootstrap_scan.py  test_cli.py  test_config.py  test_context.py  test_e2e.py  test_loader.py  test_types.py
tests/fixtures/apply-append/.swerdlow/: config.yaml
tests/fixtures/apply-append/docs/: a.md
tests/fixtures/apply-greenfield/docs/: a.md
tests/fixtures/apply-preserve/docs/: a.md
tests/fixtures/bootstrap-typed-idempotent/docs/: a.md
tests/fixtures/cycle/docs/: b.md  c.md
tests/fixtures/duplicate-id/.swerdlow/: config.yaml
tests/fixtures/duplicate-id/dir-a/: note.md
tests/fixtures/duplicate-id/dir-b/: note.md
tests/fixtures/e2e-v0.2/docs/: Hub.md  Root.md
tests/fixtures/e2e/docs/: Combat.md  GDD.md  TDD.md
tests/fixtures/id-override/docs/: some-file.md
tests/fixtures/missing-ref/docs/: orphan.md
tests/fixtures/mode-filter-multi/docs/: root.md
tests/fixtures/modes-empty/docs/: a.md
(+26 files in other folders)
