[project]
name = "swerdlow"
version = "0.1.0"
description = "Markdown-to-markdown dependency layer for AI-assisted codebases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1.0",
    "ruamel.yaml>=0.18.0",
    "mistune>=3.0.0",
    "PyYAML>=6.0",
    "pathspec>=0.12.0",
]

[project.scripts]
swerdlow = "swerdlow.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swerdlow"]
